<resources>
    <string name="app_name">Internshipdemo4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sunil Mendhe</string>
    <string name="nav_header_subtitle">sunilmendhe@gmail.com</string>
    <string name="nav_header_subtitle2">sb.mendhe@sansad.nic.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="my_journey">My Journey</string>
    <string name="my_vision">My Vision</string>
    <string name="issues">Issues</string>
    <string name="events">Events</string>
    <string name="social">Social</string>
    <string name="appointments">Appointments</string>
    <string name="become_volunteer">Become Volunteer</string>
    <string name="share_your_details">Share your details</string>
    <string name="my_proflie">My proflie</string>
    <string name="login">Login</string>


    <string name="profession" translatable="false">Profession :</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="middle_name" translatable="false">Middle Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="gender" translatable="false">Gender :</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="date_of_appointment">Date Of Appointment</string>
    <string name="bloodgrp" translatable="false">BloodGrp :</string>
    <string name="phone_no" translatable="false">Phone No.</string>
    <string name="email" translatable="false">Email</string>

    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="family_member_1">Family Member 1</string>
    <string name="name">Name</string>
    <string name="relation">Relation</string>
    <string name="string_date_of_birth">DOB</string>
    <string name="add_new_family_member">Add New Family Member</string>
    <string name="submit">Submit</string>

</resources>
