<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_myjourney"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_journey"/>
        <item
            android:id="@+id/nav_myvision"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_vision"/>
        <item
            android:id="@+id/nav_issues"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/issues"/>
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/events"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/social" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/appointments" />

    </group>
</menu>
