<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.internshipdemo4.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.internshipdemo4.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_myjourney"
        android:name="com.example.internshipdemo4.ui.myjourney.MyjourneyFragment"
        android:label="My Journey"
        tools:layout="@layout/fragment_myjourney" />

    <fragment
        android:id="@+id/nav_myvision"
        android:name="com.example.internshipdemo4.ui.myvision.MyvisionFragement"
        android:label="My Vision"
        tools:layout="@layout/fragement_myvision" />

    <fragment
        android:id="@+id/nav_issues"
        android:name="com.example.internshipdemo4.ui.issues.IssuesFragment"
        android:label="Issues"
        tools:layout="@layout/fragment_issues" />
    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.internshipdemo4.ui.events.EventsFragment"
        android:label="Events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.internshipdemo4.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_social"
        android:name="com.example.internshipdemo4.ui.social.SocialFragment"
        android:label="Social"
        tools:layout="@layout/fragment_social" />
    <fragment
        android:id="@+id/nav_appointments"
        android:name="com.example.internshipdemo4.ui.appointments.AppointmentsFragment"
        android:label="Appointments"
        tools:layout="@layout/fragment_appointments" />
    <fragment
        android:id="@+id/nav_becomevolunteer"
        android:name="com.example.internshipdemo4.ui.becomevolunteer.BecomevolunteerFragment"
        android:label="Become Volunteer"
        tools:layout="@layout/fragment_becomevolunteer" />

</navigation>